--- a/TFLite-Android/FaceDetection/app/src/main/AndroidManifest.xml
+++ b/TFLite-Android/FaceDetection/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
-        android:label="ManVanNamTFLite"
+        android:label="Face-TFLite"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
