--- a/TFLite-Android/FaceDetection/app/build.gradle
+++ b/TFLite-Android/FaceDetection/app/build.gradle
@@ -42,7 +42,9 @@ dependencies {
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.google.android.gms:play-services:7.8+'
+    implementation 'com.opencsv:opencsv:4.6'
 }
